[fix] bottom not visible

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -27,7 +27,7 @@
 }
 
 .font-white {
-  color: $color-white;
+  color: $color-white !important;
 }
 
 .color-light {
