--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -188,11 +188,6 @@ label,
 
 // Navs ========================================================================
 
-
-.nav-link {
-  color: $color-white !important;
-}
-
 .nav-tabs,
 .nav-pills {
   .nav-link,
